[project]
name = "nutils-units"
readme = "README.md"
authors = [
    { name = "Evalf", email = "info@evalf.com" },
]
requires-python = '>=3.10'
dynamic = ["description", "version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
